# SimpleHttpFileServer

./: .gitignore  CMakeLists.txt  README.md  WebFileServerExample  WebFileServerExampleTest  allocateTestFile.sh  locustfile.py  main.cpp
WebFileServer/: CMakeLists.txt  FileLoader.cpp  Request.cpp  Response.cpp  WebFileServer.cpp  utils.cpp
include/: FileLoader.hpp  Request.hpp  Response.hpp  WebFileServer.hpp  exceptions.h  utils.hpp
tests/: FileLoaderTest.cpp  RequestTest.cpp  ResponseTest.cpp  utilsTest.cpp
